Prepare for circleci prod deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ workflows:
             branches:
               only:
                 - master
-                - idc-viewer-prod
+#                - idc-viewer-prod
                 - idc-viewer-test
       - deploy_job:
           requires:
@@ -154,7 +154,7 @@ workflows:
             branches:
               only:
                 - master
-                - idc-viewer-prod
+#                - idc-viewer-prod
                 - idc-viewer-test
 
 #version: 2.1
