--- a/platform/core/package.json
+++ b/platform/core/package.json
@@ -46,6 +46,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.1",
     "mousetrap": "^1.6.3",
+    "retry": "^0.12.0",
     "validate.js": "^0.12.0"
   }
 }
