Wiring up initial skeleton Imported the validation manager into the extension manager, SopClass Handler and Panel Study Browser. The viewer now works as it was before adding the module (i.e. no errors in the console), but the validation module is not yet used (next steps)

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dev": "lerna run dev:viewer --stream",
     "dev:project": ".scripts/dev.sh",
     "dev:orthanc": "lerna run dev:orthanc --stream",
+    "dev:orthandex": "lerna run dev:orthandex --stream",
     "dev:dcm4chee": "lerna run dev:dcm4chee --stream",
     "dev:static": "lerna run dev:static --stream",
     "orthanc:up": "docker-compose -f .docker/Nginx-Orthanc/docker-compose.yml up",
