--- a/platform/app/package.json
+++ b/platform/app/package.json
@@ -67,6 +67,8 @@
     "@ohif/mode-longitudinal": "3.7.0-beta.41",
     "@ohif/mode-microscopy": "3.7.0-beta.41",
     "@ohif/mode-test": "3.7.0-beta.41",
+    "ohif-idc-mode": "https://github.com/ImagingDataCommons/ohif-idc-mode#main",
+    "ohif-gcp-mode": "https://github.com/ImagingDataCommons/ohif-gcp-mode#main",
     "@ohif/ui": "3.7.0-beta.41",
     "@types/react": "^17.0.38",
     "classnames": "^2.3.2",
