fix: braces package

--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "lodash.template": "https://github.com/lodash/lodash/archive/refs/tags/4.17.21.tar.gz",
     "html-minifier": "npm:html-minifier-terser@7.2.0",
     "socks": "2.8.3",
-    "ip": "https://registry.npmjs.org/ip-address/-/ip-address-9.0.5.tgz"
+    "ip": "https://registry.npmjs.org/ip-address/-/ip-address-9.0.5.tgz",
+    "braces": "3.0.3"
   }
 }
