--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "serve/serve-handler/path-to-regexp": "8.0.0",
     "**/react-router/path-to-regexp": "8.0.0",
     "semver": "7.5.2",
-    "body-parser": "1.20.3"
+    "body-parser": "1.20.3",
+    "rollup": "3.29.5"
   }
 }
